[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neonloops"
version = "0.5.0"
description = "Python SDK for Neonloops — run AI workflows via API"
readme = "README.md"
license = "MIT"
authors = [{ name = "Neonloops" }]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://neonloops.com"
Repository = "https://github.com/neonloops/sdk-python"
Issues = "https://github.com/neonloops/sdk-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["neonloops"]
